Fix error text spacing

--- a/src/pages/test-results-search/test-results-search.scss
+++ b/src/pages/test-results-search/test-results-search.scss
@@ -29,7 +29,7 @@ page-test-results-search {
   .results-error {
     margin-top: 24px;
     p.error-text {
-      margin: 8px 0;
+      margin: 4px 0;
       text-align: center;
     }
   }
